# rules_lean

./: CHANGELOG.md  MODULE.bazel  README.md
.github/workflows/: ci.yml
docs/: lake.md  lean.md
examples/regen_smoke/: BUILD.bazel
lean/: BUILD.bazel  lake.bzl  lean.bzl
lean/lib/RulesLean/: Internal.lean
notebooks/: interesting_packages.csv
notebooks/.ipynb_checkpoints/: 01_ecosystem_overview-checkpoint.ipynb
